Second commit after school curriculum

--- a/index.html
+++ b/index.html
@@ -42,5 +42,42 @@
         </div>
         
     </header>
+
+    <main >
+        <div class="curriculum-bg">
+            <h3 class="curruculum-hding">Standard Curriculum</h3>
+            <div class="curriculum-container display-flex">
+                <div class="curriculum-des des-1">
+                    <img src="./assets/kinder.png" alt="">
+                    <h4 class="curr-heading">Kinder (3-6) Years</h4>
+                    <p class="curr-para">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href=""><p>Read More</p></a>
+                </div>
+                <div class="curriculum-des des-2">
+                    <img src="./assets/elementary.png" alt="">
+                    <h4  class="curr-heading">Elementary School</h4>
+                    <p class="curr-para">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href=""><p>Read More</p></a>
+                </div>
+                <div class="curriculum-des des-3">
+                    <img src="./assets/middle.png" alt="">
+                    <h4 class="curr-heading">Middle (10-16) Years</h4>
+                    <p class="curr-para">Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <a href=""><p>Read More</p></a>
+                </div>
+            </div>
+            <div  class="btn-container">
+                <a href=""><button class="nxt-btn"><</button></a>
+                <a href=""><button class="nxt-btn">></button></a>
+            </div>
+        </div>
+        
+    </main>
 </body>
 </html>
