--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class="curr-para">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a href=""><p>Read More</p></a>
+                    <a href="" class="read-btn-1"><p class="read">Read More</p></a>
                 </div>
                 <div class="curriculum-des des-2">
                     <img src="./assets/elementary.png" alt="">
@@ -61,7 +61,7 @@
                     <p class="curr-para">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a href=""><p>Read More</p></a>
+                    <a href="" class="read-btn-2"><p class="read">Read More</p></a>
                 </div>
                 <div class="curriculum-des des-3">
                     <img src="./assets/middle.png" alt="">
@@ -69,7 +69,7 @@
                     <p class="curr-para">Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <a href=""><p>Read More</p></a>
+                    <a href="" class="read-btn-3"><p class="read">Read More</p></a>
                 </div>
             </div>
             <div  class="btn-container">
@@ -77,6 +77,59 @@
                 <a href=""><button class="nxt-btn">></button></a>
             </div>
         </div>
+
+        <section class="story-bg">
+            <h3 class="story-heading">Our Stories</h3>
+            <div class="story-cards-container">
+                <div class="cards">
+                    <div class="card-1-container">
+                        <div class="card-img"><img src="./assets/story-1.png" alt=""></div>
+                        <a href=""><button class="card-btn">November 19, 2019</button></a>
+                        <h4 class="card-hding">A fun toddler coloring training on
+                            classroom</h4>
+                        <p class="card-para">Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                    </div>
+                    <div class="mini-cards">
+                        <div class="mini-card-container">
+                            <div class="mini-card-img">
+                                <img src="./assets/story-2.png" alt="">
+                                <button class="mini-card-btn">November 19, 2019</button>
+                            </div>
+                            <h4 class="mini-card-heading">Find out if a school fits the
+                                family’s needs</h4>
+                        </div>
+                        <div class="mini-card-container">
+                            <div class="mini-card-img">
+                                <img src="./assets/story-3.png" alt="">
+                                <button class="mini-card-btn">November 19, 2019</button>
+                            </div>
+                            <h4 class="mini-card-heading">Summer math & literacy
+                                centres for kids</h4>
+                        </div>
+                        <div class="mini-card-container">
+                            <div class="mini-card-img">
+                                <img src="./assets/story-4.png" alt="">
+                                <button class="mini-card-btn">September 10, 2019</button>
+                            </div>
+                            <h4 class="mini-card-heading">Classroom management
+                                techniques for new tutors</h4>
+                        </div>
+                        <div class="mini-card-container">
+                            <div class="mini-card-img">
+                                <img src="./assets/story-5.png" alt="">
+                                <button class="mini-card-btn">July 19, 2019</button>
+                            </div>
+                            <h4 class="mini-card-heading">Conversation rhymes
+                                improve kids listening</h4>
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+
+        </section>
         
     </main>
 </body>
