commit after footer para change

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <h4 class="footer-heading">Kids
                         Education</h4>
                 </div>
-                <p class="footer-para">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                <p class="footer-para">At Kids School, we nurture young minds with creativity, curiosity, and care. Our engaging learning environment ensures every child grows with confidence and joy. Join us in shaping a brighter future!</p>
             </div>
             <div class="footer-about">
                 <h4 class="about-scl">About School</h4>
